# surface-dynamics

./: .codespellrc  .gitignore  .gitlab-ci.yml  .travis.yml  .travis_sage_install.sh  .zenodo.json  AUTHORS  MANIFEST.in  NEWS  README  README.md  README.rst  README.txt  SPKG.txt  TODO.txt  environment.yml  index.html  make_package  origamis.html  pyproject.toml  references.html  rever.xsh  search.html  searchindex.js  setup.py  spkg-check  spkg-install
.github/: pull_request_template.md
.github/workflows/: dev.yml  doc.yml  lint.yml  test.yml
_sources/: index.rst.txt  strata.rst.txt  surface_topology.rst.txt
_sources/examples/: square_tiled_surfaces.md.txt
_sources/interval_exchanges/: constructors.rst.txt  index.rst.txt
doc/: Makefile  environment.yml
doc/news/: basic_linter.rst  ci.rst  cleaning_ribbon_graph.rst  dim-for-all-strata.rst  eantic.rst  edge-flip.rst  environment.rst  fix-new-and-compiler-warnings.rst  fix_compilation.rst  fix_map.rst  fix_rst_syntax.rst  fix_wrong_indentation.rst  flip-sequence.rst  homology.rst  iet-permutation-comparison.rst  masur-veech.rst  non-connected-fat-graphs.rst  notebooks-in-doc.rst  pixi.rst  readme.rst  rever.rst  saf-zero.rst  sage103.rst  sage105.rst  sage96.rst  sql-query-printing.rst  standard_TESTS.rst  strata.rst  surface-dynamics.rst  twist.rst  zenodo.rst
doc/source/: conf.py  database.rst  debug.sage  demo_interval_exchanges.rst  developer.rst  flat_surfaces.rst  index.rst  install.rst  interval_exchanges.rst  misc.rst  origamis.rst  references.rst  strata.rst  surface_topology.rst  topological_recursion.rst  topology.rst
docs/: .buildinfo  database.html  demo_interval_exchanges.html  developer.html  flat_surfaces.html  genindex.html  index.html  install.html  interval_exchanges.html  misc.html  objects.inv  origamis.html  py-modindex.html  references.html  search.html  searchindex.js  strata.html  surface_topology.html  topological_recursion.html  topology.html
docs/.doctrees/: database.doctree  demo_interval_exchanges.doctree  environment.pickle  index.doctree  origamis.doctree  references.doctree  strata.doctree  surface_topology.doctree
docs/_modules/: index.html
docs/_sources/: index.rst.txt  origamis.rst.txt  strata.rst.txt  surface_topology.rst.txt
docs/databases/: flat_surfaces.html
docs/examples/: interval_exchanges.html  rank2_genus3_classification.html  square_tiled_surfaces.html
docs/flat_surfaces/: abelian_strata.html  homology.html  masur_veech_volumes.html  origamis.html  quadratic_strata.html  separatrix_diagram.html  single_cylinder.html  strata.html  twist_space.html
docs/interval_exchanges/: constructors.html  conversion.html  cover.html  flip_sequence.html  iet.html  iet_family.html  index.html  integer_iet.html  labelled.html  marked_partition.html  rauzy_class_cardinality.html  reduced.html  template.html
docs/misc/: additive_multivariate_generating_series.html  constellation.html  even_permutation.html  factored_denominator.html  generalized_multiple_zeta_values.html  group_representation.html  index.html  iscc.html  latex.html  linalg.html  multiplicative_multivariate_generating_series.html  permutation.html  plane_tree.html  ppl_utils.html  sql_db.html  statistics.html
docs/surface_dynamics/: .buildinfo  database.html  demo_interval_exchanges.html  genindex.html  objects.inv  py-modindex.html  search.html  searchindex.js  strata.html  surface_topology.html
docs/topological_recursion/: index.html  kontsevich.html  masur_veech.html  no_pi.html  topological_recursion.html
docs/topology/: fat_graph.html  fat_graph_exhaustive_generation.html
examples/: interval_exchanges.html
interval_exchanges/: constructors.html  iet.html  labelled.html  reduced.html
misc/: constellation.html  index.html
src/: setup.py
src/surface_dynamics/: all.py
surface_dynamics/: __init__.py  all.py  version.py
surface_dynamics/databases/: flat_surfaces.py
surface_dynamics/flat_surfaces/: __init__.py  abelian_strata.py  all.py  fatgraph.py  homology.py  masur_veech_volumes.py  quadratic_strata.py  sauvaget_formula.py  separatrix_diagram.py  single_cylinder.py  single_cylinder_concatenation.py  strata.py  tests.py  twist.py  twist_space.py
surface_dynamics/generalized_multiple_zeta_values/: __init__.py  generalized_multiple_zeta_values.py  gmzv_generic_reduction.py  gmzv_three_variables.py  gmzv_two_variables.py  options.py
surface_dynamics/interval_exchanges/: __init__.py  all.py  constructors.py  conversion.py  cover.py  cover.py.orig  flip_sequence.py  generalized_permutation.c  iet.py  iet_family.py  iet_family.pyx  iet_family_pyx.pyx  int_iet.c  int_iet.h  int_vector.c  integer_iet.pxd  integer_iet.pyx  labelled.py  lin_alg.c  lyapunov_exponents.h  lyapunov_exponents.pyx  marked_partition.py  permutation.c  quad_cover.c  rauzy_class_cardinality.py  reduced.py  template.py
surface_dynamics/misc/: __init__.py  additive_multivariate_generating_series.py  constellation.py  divergent_multiple_zeta_values.py  even_permutation.py  factored_denominator.py  factored_denominator.py.orig  generalized_multiple_zeta_values.py  group_representation.py  group_representation.py.orig  groups.py  iscc.py  latex.py  linalg.py  linalg.py.orig  multiplicative_multivariate_generating_series.py  multivariate_generating_series.py  permutation.py  plane_tree.py  ppl_utils.py  shifted_symmetric_functions.py  sql_db.py  statistics.py
surface_dynamics/topological_recursion/: __init__.py  kontsevich.py  masur_veech.py  no_pi.py  topological_recursion.py
surface_dynamics/topology/: all.py  fat_graph.py  fat_graph.py.orig  fat_graph_exhaustive_generation.py  fat_graph_exhaustive_generation.py.orig  homology.py
tests/: __init__.py  pytest.ini  test_cylinder_diagrams.py  test_fat_graphs_enumeration.py  test_generalized_multiple_zeta_values.py  test_iet_flip_sequence.py  test_masur_veech_volumes.py  test_multivariate_generating_series.py  test_pyintervalxt_conversion.py  test_stratum_components.py  test_topological_recursion.py  test_twist.py
topological_recursion/: kontsevich.html  masur_veech.html
(+420 files in other folders)
